SILGen: Fix calls to literal constructors defined in protocol extensions

Fixes <https://bugs.swift.org/browse/SR-3173>.